# ttmd-cli

./: .gitignore  CMakeLists.txt  README.MD  TODO.MD
include/: ttmd.hpp
src/: main.cpp  ttmd.cpp
tests/: test_CRC32.cpp  test_ParseCommandLine.cpp
